--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "scripts": {},
   "repository": "https://github.com/yappbox/ember-cli-deploy-yapp-pack",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 4"
   },
   "author": "Luke Melia and the Yapp team",
   "license": "MIT",
   "devDependencies": {
-    "ember-cli": "0.2.7",
-    "ember-cli-release": "0.2.6"
+    "ember-cli": "^2.12.0",
+    "ember-cli-release": "1.0.0-beta.2"
   },
   "keywords": [
     "ember-addon",
     "ember-cli-deploy-plugin-pack"
   ],
   "dependencies": {
-    "ember-cli-deploy-lightning-pack": "^0.6.10",
-    "ember-cli-deploy-slack": "0.1.0"
+    "ember-cli-deploy-lightning-pack": "^1.0.0-beta.0",
+    "ember-cli-deploy-slack": "^1.0.0-beta.0"
   },
   "ember-addon": {
     "defaultBlueprint": "yapp-deploy-config"
