--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "ember-cli": "^2.12.0",
-    "ember-cli-release": "1.0.0-beta.2"
+    "ember-cli-release": "1.0.0-beta.2",
+    "eslint": "^3.18.0"
   },
   "keywords": [
     "ember-addon",
@@ -19,7 +20,8 @@
   ],
   "dependencies": {
     "ember-cli-deploy-lightning-pack": "^1.0.0-beta.0",
-    "ember-cli-deploy-slack": "^1.0.0-beta.0"
+    "ember-cli-deploy-slack": "^1.0.0-beta.0",
+    "rsvp": "^3.5.0"
   },
   "ember-addon": {
     "defaultBlueprint": "yapp-deploy-config"
