--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "ember-cli-deploy-plugin-pack"
   ],
   "dependencies": {
-    "ember-cli-deploy-lightning-pack": "^1.0.0-beta.0",
-    "ember-cli-deploy-slack": "^1.0.0-beta.0",
+    "ember-cli-deploy-lightning-pack": "^1.0.0",
+    "ember-cli-deploy-slack": "^1.0.0",
     "rsvp": "^3.5.0"
   },
   "ember-addon": {
