--- a/package.json
+++ b/package.json
@@ -2,22 +2,30 @@
   "name": "ember-cli-deploy-yapp-pack",
   "version": "2.2.1",
   "description": "A pack of ember-cli-deploy plugins for deploying Yapp's Ember apps.",
-  "scripts": {},
-  "repository": "https://github.com/yappbox/ember-cli-deploy-yapp-pack",
-  "engines": {
-    "node": ">= 4"
+  "scripts": {
+    "lint:js": "eslint ."
   },
-  "author": "Luke Melia and the Yapp team",
-  "license": "MIT",
+  "engines": {
+    "node": "8.* || >= 10.*"
+  },
   "devDependencies": {
-    "ember-cli": "^2.12.0",
-    "ember-cli-release": "1.0.0-beta.2",
-    "eslint": "^3.18.0"
+    "@ember/optional-features": "^0.7.0",
+    "ember-cli": "~3.12.0",
+    "ember-cli-release-tag": "^0.1.5",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-qunit": "^4.4.1",
+    "ember-source-channel-url": "^1.1.0",
+    "eslint": "^6.2.0",
+    "eslint-plugin-ember": "^6.2.0",
+    "eslint-plugin-node": "^9.0.1"
   },
   "keywords": [
     "ember-addon",
     "ember-cli-deploy-plugin-pack"
   ],
+  "repository": "https://github.com/yappbox/ember-cli-deploy-yapp-pack",
+  "license": "MIT",
+  "author": "Luke Melia and the Yapp team",
   "dependencies": {
     "ember-cli-deploy-lightning-pack": "^1.1.1",
     "ember-cli-deploy-slack": "^1.0.0",
