--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "node": ">= 10.*"
   },
   "devDependencies": {
-    "auto-changelog": "^2.0.0",
     "ember-cli": "~3.18.0",
     "eslint": "^7.0.0",
-    "release-it": "*"
+    "lerna-changelog": "^1.0.1",
+    "release-it": "*",
+    "release-it-lerna-changelog": "^2.3.0"
   },
   "keywords": [
     "ember-addon",
@@ -23,7 +24,7 @@
   "license": "MIT",
   "author": "Luke Melia and the Yapp team",
   "dependencies": {
-    "ember-cli-deploy-lightning-pack": "^3.0.0",
+    "ember-cli-deploy-lightning-pack": "^3.0.1",
     "ember-cli-deploy-slack": "^1.0.0",
     "rsvp": "^4.8.5"
   },
@@ -31,15 +32,21 @@
     "defaultBlueprint": "yapp-deploy-config"
   },
   "release-it": {
-    "hooks": {
-      "after:bump": "npx auto-changelog -p"
-    },
     "git": {
-      "changelog": "npx auto-changelog --stdout --commit-limit false --unreleased --template https://raw.githubusercontent.com/release-it/release-it/master/templates/changelog-compact.hbs",
-      "requireCleanWorkingDir": false
+      "tagName": "v${version}",
+      "commitMessage": "v${version}",
+      "pushArgs": "--follow-tags --no-verify"
+    },
+    "npm": {
+      "publish": false
     },
     "github": {
       "release": true
+    },
+    "plugins": {
+      "release-it-lerna-changelog": {
+        "infile": "CHANGELOG.md"
+      }
     }
   }
 }
