--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "node": ">= 10.*"
   },
   "devDependencies": {
-    "ember-cli": "~3.18.0",
-    "eslint": "^7.0.0",
+    "ember-cli": "~3.22.0",
+    "eslint": "^7.14.0",
     "lerna-changelog": "^1.0.1",
-    "release-it": "*",
-    "release-it-lerna-changelog": "^2.3.0"
+    "release-it": "14.2.1",
+    "release-it-lerna-changelog": "^3.1.0"
   },
   "keywords": [
     "ember-addon",
@@ -25,7 +25,7 @@
   "author": "Luke Melia and the Yapp team",
   "dependencies": {
     "ember-cli-deploy-lightning-pack": "^4.0.0",
-    "ember-cli-deploy-slack": "^1.0.0",
+    "ember-cli-deploy-slack": "^1.0.1",
     "rsvp": "^4.8.5"
   },
   "ember-addon": {
