--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "node": ">= 10.*"
   },
   "devDependencies": {
-    "ember-cli": "~3.22.0",
-    "eslint": "^7.14.0",
-    "lerna-changelog": "^1.0.1",
-    "release-it": "14.2.1",
-    "release-it-lerna-changelog": "^3.1.0"
+    "ember-cli": "~3.28.3",
+    "eslint": "^8.0.1",
+    "lerna-changelog": "^2.2.0",
+    "release-it": "14.11.6",
+    "release-it-lerna-changelog": "^4.0.0"
   },
   "keywords": [
     "ember-addon",
@@ -51,5 +51,9 @@
         "infile": "CHANGELOG.md"
       }
     }
+  },
+  "volta": {
+    "node": "14.18.1",
+    "yarn": "1.22.17"
   }
 }
