--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "ember-cli-deploy-lightning-pack": "^4.2.2",
     "ember-cli-deploy-slack": "^1.0.1",
+    "heroku-client": "^3.1.0",
     "rsvp": "^4.8.5"
   },
   "ember-addon": {
