--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Luke Melia and the Yapp team",
   "dependencies": {
     "ember-cli-deploy-lightning-pack": "^6.0.0",
+    "ember-cli-deploy-sentry-cli": "^3.1.0",
     "ember-cli-deploy-slack": "^2.0.0",
     "heroku-client": "^3.1.0",
     "rsvp": "^4.8.5"
