--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Luke Melia and the Yapp team",
   "dependencies": {
     "ember-cli-deploy-lightning-pack": "^6.0.0",
+    "ember-cli-deploy-sentry-cli": "yappbox/ember-cli-deploy-sentry-cli#80ab41a732e17fb0f0a597987766a058fe227674",
     "ember-cli-deploy-slack": "^2.0.0",
     "heroku-client": "^3.1.0",
     "rsvp": "^4.8.5"
@@ -51,7 +52,7 @@
     }
   },
   "volta": {
-    "node": "14.21.3",
-    "yarn": "1.22.19"
+    "node": "20.19.3",
+    "yarn": "1.22.22"
   }
 }
