--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "license": "MIT",
   "author": "Luke Melia and the Yapp team",
   "dependencies": {
-    "ember-cli-deploy-lightning-pack": "^6.0.0",
+    "ember-cli-deploy-lightning-pack": "^7.0.0",
     "ember-cli-deploy-sentry-cli": "github:yappbox/ember-cli-deploy-sentry-cli#bd62065c71e5ea9c60845648ab4b2e0ddc69deed",
     "ember-cli-deploy-slack": "^2.0.0",
     "heroku-client": "^3.1.0",
@@ -56,6 +56,6 @@
   },
   "volta": {
     "node": "20.19.3",
-    "yarn": "1.22.22"
+    "pnpm": "10.17.1"
   }
 }
